@@ -47,7 +47,7 @@ MAPS;
 $style_rybox=<<<RYBOX
 <style>
 input,select,a:focus{outline:none;border:none;}
-.contextMenu{position:absolute;display:none;}
+.contextMenu{position:absolute;display:none;white-space:nowrap;}
 .contextMenu>ul>li{font-family:verdana;font-size:12px;text-align:left;}
 .contextMenu>ul>li>a{color:black;}
 .contextMenu>ul>li>a:focus{outline:1px dotted;color:black;}
